--- a/result/2022-07-19.md
+++ b/result/2022-07-19.md
@@ -37,17 +37,17 @@
 37. [刘畊宏给周杰伦刷奶茶礼物](https://s.weibo.com//weibo?q=%23%E5%88%98%E7%95%8A%E5%AE%8F%E7%BB%99%E5%91%A8%E6%9D%B0%E4%BC%A6%E5%88%B7%E5%A5%B6%E8%8C%B6%E7%A4%BC%E7%89%A9%23&Refer=top) 779936
 38. [彩虹糖](https://s.weibo.com//weibo?q=%E5%BD%A9%E8%99%B9%E7%B3%96&Refer=top) 742649
 39. [西班牙高温热浪已致510人死亡](https://s.weibo.com//weibo?q=%23%E8%A5%BF%E7%8F%AD%E7%89%99%E9%AB%98%E6%B8%A9%E7%83%AD%E6%B5%AA%E5%B7%B2%E8%87%B4510%E4%BA%BA%E6%AD%BB%E4%BA%A1%23&Refer=top) 729378
-40. [成都招聘需求全国第一](https://s.weibo.com//weibo?q=%23%E6%88%90%E9%83%BD%E6%8B%9B%E8%81%98%E9%9C%80%E6%B1%82%E5%85%A8%E5%9B%BD%E7%AC%AC%E4%B8%80%23&Refer=top) 675083
+40. [成都招聘需求全国第一](https://s.weibo.com//weibo?q=%23%E6%88%90%E9%83%BD%E6%8B%9B%E8%81%98%E9%9C%80%E6%B1%82%E5%85%A8%E5%9B%BD%E7%AC%AC%E4%B8%80%23&Refer=top) 697232
 41. [原神 散兵](https://s.weibo.com//weibo?q=%E5%8E%9F%E7%A5%9E%20%E6%95%A3%E5%85%B5&Refer=top) 663920
-42. [美国务院批准1.08亿美元对台军售](https://s.weibo.com//weibo?q=%23%E7%BE%8E%E5%9B%BD%E5%8A%A1%E9%99%A2%E6%89%B9%E5%87%861.08%E4%BA%BF%E7%BE%8E%E5%85%83%E5%AF%B9%E5%8F%B0%E5%86%9B%E5%94%AE%23&Refer=top) 646821
-43. [玛氏彩虹糖被指控可致DNA改变](https://s.weibo.com//weibo?q=%23%E7%8E%9B%E6%B0%8F%E5%BD%A9%E8%99%B9%E7%B3%96%E8%A2%AB%E6%8C%87%E6%8E%A7%E5%8F%AF%E8%87%B4DNA%E6%94%B9%E5%8F%98%23&Refer=top) 630123
-44. [鹿晗申请对侵权公司限制消费](https://s.weibo.com//weibo?q=%23%E9%B9%BF%E6%99%97%E7%94%B3%E8%AF%B7%E5%AF%B9%E4%BE%B5%E6%9D%83%E5%85%AC%E5%8F%B8%E9%99%90%E5%88%B6%E6%B6%88%E8%B4%B9%23&Refer=top) 628500
+42. [鹿晗申请对侵权公司限制消费](https://s.weibo.com//weibo?q=%23%E9%B9%BF%E6%99%97%E7%94%B3%E8%AF%B7%E5%AF%B9%E4%BE%B5%E6%9D%83%E5%85%AC%E5%8F%B8%E9%99%90%E5%88%B6%E6%B6%88%E8%B4%B9%23&Refer=top) 656458
+43. [美国务院批准1.08亿美元对台军售](https://s.weibo.com//weibo?q=%23%E7%BE%8E%E5%9B%BD%E5%8A%A1%E9%99%A2%E6%89%B9%E5%87%861.08%E4%BA%BF%E7%BE%8E%E5%85%83%E5%AF%B9%E5%8F%B0%E5%86%9B%E5%94%AE%23&Refer=top) 646821
+44. [玛氏彩虹糖被指控可致DNA改变](https://s.weibo.com//weibo?q=%23%E7%8E%9B%E6%B0%8F%E5%BD%A9%E8%99%B9%E7%B3%96%E8%A2%AB%E6%8C%87%E6%8E%A7%E5%8F%AF%E8%87%B4DNA%E6%94%B9%E5%8F%98%23&Refer=top) 630123
 45. [网友齐帮韩乔生找IQ](https://s.weibo.com//weibo?q=%23%E7%BD%91%E5%8F%8B%E9%BD%90%E5%B8%AE%E9%9F%A9%E4%B9%94%E7%94%9F%E6%89%BEIQ%23&Refer=top) 611062
 46. [验瓜师3秒挑一个西瓜月入3万](https://s.weibo.com//weibo?q=%23%E9%AA%8C%E7%93%9C%E5%B8%883%E7%A7%92%E6%8C%91%E4%B8%80%E4%B8%AA%E8%A5%BF%E7%93%9C%E6%9C%88%E5%85%A53%E4%B8%87%23&Refer=top) 601781
 47. [飞天小女警重启](https://s.weibo.com//weibo?q=%23%E9%A3%9E%E5%A4%A9%E5%B0%8F%E5%A5%B3%E8%AD%A6%E9%87%8D%E5%90%AF%23&Refer=top) 599043
 48. [四川新增本土确诊12例](https://s.weibo.com//weibo?q=%23%E5%9B%9B%E5%B7%9D%E6%96%B0%E5%A2%9E%E6%9C%AC%E5%9C%9F%E7%A1%AE%E8%AF%8A12%E4%BE%8B%23&Refer=top) 549912
 49. [河南新增本土无症状45例](https://s.weibo.com//weibo?q=%23%E6%B2%B3%E5%8D%97%E6%96%B0%E5%A2%9E%E6%9C%AC%E5%9C%9F%E6%97%A0%E7%97%87%E7%8A%B645%E4%BE%8B%23&Refer=top) 526195
-50. [严打涉未成年人网络淫秽色情](https://s.weibo.com//weibo?q=%23%E4%B8%A5%E6%89%93%E6%B6%89%E6%9C%AA%E6%88%90%E5%B9%B4%E4%BA%BA%E7%BD%91%E7%BB%9C%E6%B7%AB%E7%A7%BD%E8%89%B2%E6%83%85%23&Refer=top) 521851
+50. [严打涉未成年人网络淫秽色情](https://s.weibo.com//weibo?q=%23%E4%B8%A5%E6%89%93%E6%B6%89%E6%9C%AA%E6%88%90%E5%B9%B4%E4%BA%BA%E7%BD%91%E7%BB%9C%E6%B7%AB%E7%A7%BD%E8%89%B2%E6%83%85%23&Refer=top) 523609
 51. [每一步都忍不住洗手](https://s.weibo.com//weibo?q=%23%E6%AF%8F%E4%B8%80%E6%AD%A5%E9%83%BD%E5%BF%8D%E4%B8%8D%E4%BD%8F%E6%B4%97%E6%89%8B%23&Refer=top) 512059
 52. [欢颜里](https://s.weibo.com//weibo?q=%E6%AC%A2%E9%A2%9C%E9%87%8C&Refer=top) 503718
 53. [男子把病房当家霸占3年被拘](https://s.weibo.com//weibo?q=%23%E7%94%B7%E5%AD%90%E6%8A%8A%E7%97%85%E6%88%BF%E5%BD%93%E5%AE%B6%E9%9C%B8%E5%8D%A03%E5%B9%B4%E8%A2%AB%E6%8B%98%23&Refer=top) 503424
@@ -70,9 +70,9 @@
 70. [女子违停后被交警老公贴罚单](https://s.weibo.com//weibo?q=%23%E5%A5%B3%E5%AD%90%E8%BF%9D%E5%81%9C%E5%90%8E%E8%A2%AB%E4%BA%A4%E8%AD%A6%E8%80%81%E5%85%AC%E8%B4%B4%E7%BD%9A%E5%8D%95%23&Refer=top) 326085
 71. [中国持仓美债12年来首次跌破万亿](https://s.weibo.com//weibo?q=%23%E4%B8%AD%E5%9B%BD%E6%8C%81%E4%BB%93%E7%BE%8E%E5%80%BA12%E5%B9%B4%E6%9D%A5%E9%A6%96%E6%AC%A1%E8%B7%8C%E7%A0%B4%E4%B8%87%E4%BA%BF%23&Refer=top) 324917
 72. [严打网络水军造谣引流](https://s.weibo.com//weibo?q=%23%E4%B8%A5%E6%89%93%E7%BD%91%E7%BB%9C%E6%B0%B4%E5%86%9B%E9%80%A0%E8%B0%A3%E5%BC%95%E6%B5%81%23&Refer=top) 320898
-73. [奥比岛 疲劳值](https://s.weibo.com//weibo?q=%E5%A5%A5%E6%AF%94%E5%B2%9B%20%E7%96%B2%E5%8A%B3%E5%80%BC&Refer=top) 314180
-74. [不会用电脑的18岁少年高考632分](https://s.weibo.com//weibo?q=%23%E4%B8%8D%E4%BC%9A%E7%94%A8%E7%94%B5%E8%84%91%E7%9A%8418%E5%B2%81%E5%B0%91%E5%B9%B4%E9%AB%98%E8%80%83632%E5%88%86%23&Refer=top) 313947
-75. [日媒称羽生将转战职业花滑领域](https://s.weibo.com//weibo?q=%23%E6%97%A5%E5%AA%92%E7%A7%B0%E7%BE%BD%E7%94%9F%E5%B0%86%E8%BD%AC%E6%88%98%E8%81%8C%E4%B8%9A%E8%8A%B1%E6%BB%91%E9%A2%86%E5%9F%9F%23&Refer=top) 312405
+73. [日媒称羽生将转战职业花滑领域](https://s.weibo.com//weibo?q=%23%E6%97%A5%E5%AA%92%E7%A7%B0%E7%BE%BD%E7%94%9F%E5%B0%86%E8%BD%AC%E6%88%98%E8%81%8C%E4%B8%9A%E8%8A%B1%E6%BB%91%E9%A2%86%E5%9F%9F%23&Refer=top) 315142
+74. [奥比岛 疲劳值](https://s.weibo.com//weibo?q=%E5%A5%A5%E6%AF%94%E5%B2%9B%20%E7%96%B2%E5%8A%B3%E5%80%BC&Refer=top) 314180
+75. [不会用电脑的18岁少年高考632分](https://s.weibo.com//weibo?q=%23%E4%B8%8D%E4%BC%9A%E7%94%A8%E7%94%B5%E8%84%91%E7%9A%8418%E5%B2%81%E5%B0%91%E5%B9%B4%E9%AB%98%E8%80%83632%E5%88%86%23&Refer=top) 313947
 76. [国台办敦促美方放弃打台湾牌图谋](https://s.weibo.com//weibo?q=%23%E5%9B%BD%E5%8F%B0%E5%8A%9E%E6%95%A6%E4%BF%83%E7%BE%8E%E6%96%B9%E6%94%BE%E5%BC%83%E6%89%93%E5%8F%B0%E6%B9%BE%E7%89%8C%E5%9B%BE%E8%B0%8B%23&Refer=top) 299445
 77. [北京新增4例境外输入确诊](https://s.weibo.com//weibo?q=%23%E5%8C%97%E4%BA%AC%E6%96%B0%E5%A2%9E4%E4%BE%8B%E5%A2%83%E5%A4%96%E8%BE%93%E5%85%A5%E7%A1%AE%E8%AF%8A%23&Refer=top) 295659
 78. [南大已发出550余封录取通知书](https://s.weibo.com//weibo?q=%23%E5%8D%97%E5%A4%A7%E5%B7%B2%E5%8F%91%E5%87%BA550%E4%BD%99%E5%B0%81%E5%BD%95%E5%8F%96%E9%80%9A%E7%9F%A5%E4%B9%A6%23&Refer=top) 295154
@@ -95,46 +95,48 @@
 95. [7月18日福建本土0新增](https://s.weibo.com//weibo?q=7%E6%9C%8818%E6%97%A5%E7%A6%8F%E5%BB%BA%E6%9C%AC%E5%9C%9F0%E6%96%B0%E5%A2%9E&Refer=top) 251736
 96. [张小泉销售费用是研发投入5倍](https://s.weibo.com//weibo?q=%23%E5%BC%A0%E5%B0%8F%E6%B3%89%E9%94%80%E5%94%AE%E8%B4%B9%E7%94%A8%E6%98%AF%E7%A0%94%E5%8F%91%E6%8A%95%E5%85%A55%E5%80%8D%23&Refer=top) 250548
 97. [美羊羊气泡被玩坏了](https://s.weibo.com//weibo?q=%23%E7%BE%8E%E7%BE%8A%E7%BE%8A%E6%B0%94%E6%B3%A1%E8%A2%AB%E7%8E%A9%E5%9D%8F%E4%BA%86%23&Refer=top) 247756
-98. [夏天一定要记得开窗透气](https://s.weibo.com//weibo?q=%23%E5%A4%8F%E5%A4%A9%E4%B8%80%E5%AE%9A%E8%A6%81%E8%AE%B0%E5%BE%97%E5%BC%80%E7%AA%97%E9%80%8F%E6%B0%94%23&Refer=top) 235207
-99. [主任会扔下楼的病历](https://s.weibo.com//weibo?q=%23%E4%B8%BB%E4%BB%BB%E4%BC%9A%E6%89%94%E4%B8%8B%E6%A5%BC%E7%9A%84%E7%97%85%E5%8E%86%23&Refer=top) 235079
-100. [优化全国年节和法定节假日时间分布格局](https://s.weibo.com//weibo?q=%23%E4%BC%98%E5%8C%96%E5%85%A8%E5%9B%BD%E5%B9%B4%E8%8A%82%E5%92%8C%E6%B3%95%E5%AE%9A%E8%8A%82%E5%81%87%E6%97%A5%E6%97%B6%E9%97%B4%E5%88%86%E5%B8%83%E6%A0%BC%E5%B1%80%23&Refer=top) 234861
-101. [新欢可以代替旧爱吗](https://s.weibo.com//weibo?q=%23%E6%96%B0%E6%AC%A2%E5%8F%AF%E4%BB%A5%E4%BB%A3%E6%9B%BF%E6%97%A7%E7%88%B1%E5%90%97%23&Refer=top) 223095
-102. [的哥认出盗贼直接开到治安卡口](https://s.weibo.com//weibo?q=%23%E7%9A%84%E5%93%A5%E8%AE%A4%E5%87%BA%E7%9B%97%E8%B4%BC%E7%9B%B4%E6%8E%A5%E5%BC%80%E5%88%B0%E6%B2%BB%E5%AE%89%E5%8D%A1%E5%8F%A3%23&Refer=top) 214295
-103. [当代年轻人的朋友圈文案](https://s.weibo.com//weibo?q=%23%E5%BD%93%E4%BB%A3%E5%B9%B4%E8%BD%BB%E4%BA%BA%E7%9A%84%E6%9C%8B%E5%8F%8B%E5%9C%88%E6%96%87%E6%A1%88%23&Refer=top) 213321
-104. [男子被蚊子叮咬患脓毒症进ICU](https://s.weibo.com//weibo?q=%23%E7%94%B7%E5%AD%90%E8%A2%AB%E8%9A%8A%E5%AD%90%E5%8F%AE%E5%92%AC%E6%82%A3%E8%84%93%E6%AF%92%E7%97%87%E8%BF%9BICU%23&Refer=top) 207578
-105. [理发前后变化能有多大](https://s.weibo.com//weibo?q=%23%E7%90%86%E5%8F%91%E5%89%8D%E5%90%8E%E5%8F%98%E5%8C%96%E8%83%BD%E6%9C%89%E5%A4%9A%E5%A4%A7%23&Refer=top) 199305
-106. [两男子景区悬崖边脚踢巨石](https://s.weibo.com//weibo?q=%23%E4%B8%A4%E7%94%B7%E5%AD%90%E6%99%AF%E5%8C%BA%E6%82%AC%E5%B4%96%E8%BE%B9%E8%84%9A%E8%B8%A2%E5%B7%A8%E7%9F%B3%23&Refer=top) 198716
-107. [退伍老兵回应跪地6分钟救晕厥女子](https://s.weibo.com//weibo?q=%23%E9%80%80%E4%BC%8D%E8%80%81%E5%85%B5%E5%9B%9E%E5%BA%94%E8%B7%AA%E5%9C%B06%E5%88%86%E9%92%9F%E6%95%91%E6%99%95%E5%8E%A5%E5%A5%B3%E5%AD%90%23&Refer=top) 193564
-108. [2022河南高招多所名校断档](https://s.weibo.com//weibo?q=%232022%E6%B2%B3%E5%8D%97%E9%AB%98%E6%8B%9B%E5%A4%9A%E6%89%80%E5%90%8D%E6%A0%A1%E6%96%AD%E6%A1%A3%23&Refer=top) 190918
-109. [世界第四个货运机场为什么选在湖北鄂州](https://s.weibo.com//weibo?q=%E4%B8%96%E7%95%8C%E7%AC%AC%E5%9B%9B%E4%B8%AA%E8%B4%A7%E8%BF%90%E6%9C%BA%E5%9C%BA%E4%B8%BA%E4%BB%80%E4%B9%88%E9%80%89%E5%9C%A8%E6%B9%96%E5%8C%97%E9%84%82%E5%B7%9E&Refer=top) 185458
-110. [国际乒联第29周排名](https://s.weibo.com//weibo?q=%23%E5%9B%BD%E9%99%85%E4%B9%92%E8%81%94%E7%AC%AC29%E5%91%A8%E6%8E%92%E5%90%8D%23&Refer=top) 183765
-111. [动作摆出来对面就怂了](https://s.weibo.com//weibo?q=%23%E5%8A%A8%E4%BD%9C%E6%91%86%E5%87%BA%E6%9D%A5%E5%AF%B9%E9%9D%A2%E5%B0%B1%E6%80%82%E4%BA%86%23&Refer=top) 181569
-112. [6位医生坚持做按压救回心梗男子](https://s.weibo.com//weibo?q=%236%E4%BD%8D%E5%8C%BB%E7%94%9F%E5%9D%9A%E6%8C%81%E5%81%9A%E6%8C%89%E5%8E%8B%E6%95%91%E5%9B%9E%E5%BF%83%E6%A2%97%E7%94%B7%E5%AD%90%23&Refer=top) 181499
-113. [路人视角韩乔生还挺萌](https://s.weibo.com//weibo?q=%23%E8%B7%AF%E4%BA%BA%E8%A7%86%E8%A7%92%E9%9F%A9%E4%B9%94%E7%94%9F%E8%BF%98%E6%8C%BA%E8%90%8C%23&Refer=top) 180415
-114. [才知道快速冰镇饮料的方法](https://s.weibo.com//weibo?q=%23%E6%89%8D%E7%9F%A5%E9%81%93%E5%BF%AB%E9%80%9F%E5%86%B0%E9%95%87%E9%A5%AE%E6%96%99%E7%9A%84%E6%96%B9%E6%B3%95%23&Refer=top) 171601
-115. [合川桃片总厂破产清算](https://s.weibo.com//weibo?q=%23%E5%90%88%E5%B7%9D%E6%A1%83%E7%89%87%E6%80%BB%E5%8E%82%E7%A0%B4%E4%BA%A7%E6%B8%85%E7%AE%97%23&Refer=top) 170516
-116. [张小泉为什么不能拍蒜](https://s.weibo.com//weibo?q=%23%E5%BC%A0%E5%B0%8F%E6%B3%89%E4%B8%BA%E4%BB%80%E4%B9%88%E4%B8%8D%E8%83%BD%E6%8B%8D%E8%92%9C%23&Refer=top) 163391
-117. [晚晚 象组](https://s.weibo.com//weibo?q=%E6%99%9A%E6%99%9A%20%E8%B1%A1%E7%BB%84&Refer=top) 153566
-118. [人身安全保护令司法解释8月起施行](https://s.weibo.com//weibo?q=%23%E4%BA%BA%E8%BA%AB%E5%AE%89%E5%85%A8%E4%BF%9D%E6%8A%A4%E4%BB%A4%E5%8F%B8%E6%B3%95%E8%A7%A3%E9%87%8A8%E6%9C%88%E8%B5%B7%E6%96%BD%E8%A1%8C%23&Refer=top) 153254
-119. [羽生结弦7月19日新闻发布会](https://s.weibo.com//weibo?q=%23%E7%BE%BD%E7%94%9F%E7%BB%93%E5%BC%A67%E6%9C%8819%E6%97%A5%E6%96%B0%E9%97%BB%E5%8F%91%E5%B8%83%E4%BC%9A%23&Refer=top) 152033
-120. [人工智能能为养老带来什么](https://s.weibo.com//weibo?q=%23%E4%BA%BA%E5%B7%A5%E6%99%BA%E8%83%BD%E8%83%BD%E4%B8%BA%E5%85%BB%E8%80%81%E5%B8%A6%E6%9D%A5%E4%BB%80%E4%B9%88%23&Refer=top) 149518
-121. [奶茶锦衣卫便宜又好喝](https://s.weibo.com//weibo?q=%23%E5%A5%B6%E8%8C%B6%E9%94%A6%E8%A1%A3%E5%8D%AB%E4%BE%BF%E5%AE%9C%E5%8F%88%E5%A5%BD%E5%96%9D%23&Refer=top) 143665
-122. [对台军售休想撼动中国统一大势](https://s.weibo.com//weibo?q=%23%E5%AF%B9%E5%8F%B0%E5%86%9B%E5%94%AE%E4%BC%91%E6%83%B3%E6%92%BC%E5%8A%A8%E4%B8%AD%E5%9B%BD%E7%BB%9F%E4%B8%80%E5%A4%A7%E5%8A%BF%23&Refer=top) 141433
-123. [国防部回应美对台军售](https://s.weibo.com//weibo?q=%23%E5%9B%BD%E9%98%B2%E9%83%A8%E5%9B%9E%E5%BA%94%E7%BE%8E%E5%AF%B9%E5%8F%B0%E5%86%9B%E5%94%AE%23&Refer=top) 140565
-124. [北大校友为讨汤老人儿子募捐](https://s.weibo.com//weibo?q=%23%E5%8C%97%E5%A4%A7%E6%A0%A1%E5%8F%8B%E4%B8%BA%E8%AE%A8%E6%B1%A4%E8%80%81%E4%BA%BA%E5%84%BF%E5%AD%90%E5%8B%9F%E6%8D%90%23&Refer=top) 134688
-125. [腾讯视频否认与快手合作](https://s.weibo.com//weibo?q=%23%E8%85%BE%E8%AE%AF%E8%A7%86%E9%A2%91%E5%90%A6%E8%AE%A4%E4%B8%8E%E5%BF%AB%E6%89%8B%E5%90%88%E4%BD%9C%23&Refer=top) 127817
-126. [男朋友承包了我一年的包](https://s.weibo.com//weibo?q=%23%E7%94%B7%E6%9C%8B%E5%8F%8B%E6%89%BF%E5%8C%85%E4%BA%86%E6%88%91%E4%B8%80%E5%B9%B4%E7%9A%84%E5%8C%85%23&Refer=top) 126931
-127. [小奶狗的颜值能有多高](https://s.weibo.com//weibo?q=%23%E5%B0%8F%E5%A5%B6%E7%8B%97%E7%9A%84%E9%A2%9C%E5%80%BC%E8%83%BD%E6%9C%89%E5%A4%9A%E9%AB%98%23&Refer=top) 122486
-128. [奥比岛 装修](https://s.weibo.com//weibo?q=%E5%A5%A5%E6%AF%94%E5%B2%9B%20%E8%A3%85%E4%BF%AE&Refer=top) 106304
-129. [你想倾诉的时候妈妈都在](https://s.weibo.com//weibo?q=%23%E4%BD%A0%E6%83%B3%E5%80%BE%E8%AF%89%E7%9A%84%E6%97%B6%E5%80%99%E5%A6%88%E5%A6%88%E9%83%BD%E5%9C%A8%23&Refer=top) 105425
-130. [张小泉总经理称中国人切菜方法不对](https://s.weibo.com//weibo?q=%23%E5%BC%A0%E5%B0%8F%E6%B3%89%E6%80%BB%E7%BB%8F%E7%90%86%E7%A7%B0%E4%B8%AD%E5%9B%BD%E4%BA%BA%E5%88%87%E8%8F%9C%E6%96%B9%E6%B3%95%E4%B8%8D%E5%AF%B9%23&Refer=top) 104116
-131. [人类幼崽请你逛超市是什么体验](https://s.weibo.com//weibo?q=%23%E4%BA%BA%E7%B1%BB%E5%B9%BC%E5%B4%BD%E8%AF%B7%E4%BD%A0%E9%80%9B%E8%B6%85%E5%B8%82%E6%98%AF%E4%BB%80%E4%B9%88%E4%BD%93%E9%AA%8C%23&Refer=top) 103924
-132. [胡明轩14分](https://s.weibo.com//weibo?q=%23%E8%83%A1%E6%98%8E%E8%BD%A914%E5%88%86%23&Refer=top) 100356
-133. [古代就有站岗小狗](https://s.weibo.com//weibo?q=%23%E5%8F%A4%E4%BB%A3%E5%B0%B1%E6%9C%89%E7%AB%99%E5%B2%97%E5%B0%8F%E7%8B%97%23&Refer=top) 100214
-134. [蔡徐坤用海形容自己](https://s.weibo.com//weibo?q=%23%E8%94%A1%E5%BE%90%E5%9D%A4%E7%94%A8%E6%B5%B7%E5%BD%A2%E5%AE%B9%E8%87%AA%E5%B7%B1%23&Refer=top) 96964
-135. [成都本土疫情病例活动轨迹风险点位一览](https://s.weibo.com//weibo?q=%23%E6%88%90%E9%83%BD%E6%9C%AC%E5%9C%9F%E7%96%AB%E6%83%85%E7%97%85%E4%BE%8B%E6%B4%BB%E5%8A%A8%E8%BD%A8%E8%BF%B9%E9%A3%8E%E9%99%A9%E7%82%B9%E4%BD%8D%E4%B8%80%E8%A7%88%23&Refer=top) 96488
-136. [不能拍蒜的菜刀等于放弃中餐市场](https://s.weibo.com//weibo?q=%23%E4%B8%8D%E8%83%BD%E6%8B%8D%E8%92%9C%E7%9A%84%E8%8F%9C%E5%88%80%E7%AD%89%E4%BA%8E%E6%94%BE%E5%BC%83%E4%B8%AD%E9%A4%90%E5%B8%82%E5%9C%BA%23&Refer=top) 74536
-137. [女子违停被交警老公贴罚单](https://s.weibo.com//weibo?q=%23%E5%A5%B3%E5%AD%90%E8%BF%9D%E5%81%9C%E8%A2%AB%E4%BA%A4%E8%AD%A6%E8%80%81%E5%85%AC%E8%B4%B4%E7%BD%9A%E5%8D%95%23&Refer=top) 73918
-138. [中国男篮大胜印尼男篮](https://s.weibo.com//weibo?q=%23%E4%B8%AD%E5%9B%BD%E7%94%B7%E7%AF%AE%E5%A4%A7%E8%83%9C%E5%8D%B0%E5%B0%BC%E7%94%B7%E7%AF%AE%23&Refer=top) 73535
-139. [河南省考7月21日公布笔试成绩](https://s.weibo.com//weibo?q=%23%E6%B2%B3%E5%8D%97%E7%9C%81%E8%80%837%E6%9C%8821%E6%97%A5%E5%85%AC%E5%B8%83%E7%AC%94%E8%AF%95%E6%88%90%E7%BB%A9%23&Refer=top) 8733
-140. [搞笑女化妆翻车体验](https://s.weibo.com//weibo?q=%23%E6%90%9E%E7%AC%91%E5%A5%B3%E5%8C%96%E5%A6%86%E7%BF%BB%E8%BD%A6%E4%BD%93%E9%AA%8C%23&Refer=top) 8062
+98. [6位医生坚持做按压救回心梗男子](https://s.weibo.com//weibo?q=%236%E4%BD%8D%E5%8C%BB%E7%94%9F%E5%9D%9A%E6%8C%81%E5%81%9A%E6%8C%89%E5%8E%8B%E6%95%91%E5%9B%9E%E5%BF%83%E6%A2%97%E7%94%B7%E5%AD%90%23&Refer=top) 236207
+99. [夏天一定要记得开窗透气](https://s.weibo.com//weibo?q=%23%E5%A4%8F%E5%A4%A9%E4%B8%80%E5%AE%9A%E8%A6%81%E8%AE%B0%E5%BE%97%E5%BC%80%E7%AA%97%E9%80%8F%E6%B0%94%23&Refer=top) 235207
+100. [主任会扔下楼的病历](https://s.weibo.com//weibo?q=%23%E4%B8%BB%E4%BB%BB%E4%BC%9A%E6%89%94%E4%B8%8B%E6%A5%BC%E7%9A%84%E7%97%85%E5%8E%86%23&Refer=top) 235079
+101. [优化全国年节和法定节假日时间分布格局](https://s.weibo.com//weibo?q=%23%E4%BC%98%E5%8C%96%E5%85%A8%E5%9B%BD%E5%B9%B4%E8%8A%82%E5%92%8C%E6%B3%95%E5%AE%9A%E8%8A%82%E5%81%87%E6%97%A5%E6%97%B6%E9%97%B4%E5%88%86%E5%B8%83%E6%A0%BC%E5%B1%80%23&Refer=top) 234861
+102. [新欢可以代替旧爱吗](https://s.weibo.com//weibo?q=%23%E6%96%B0%E6%AC%A2%E5%8F%AF%E4%BB%A5%E4%BB%A3%E6%9B%BF%E6%97%A7%E7%88%B1%E5%90%97%23&Refer=top) 223095
+103. [的哥认出盗贼直接开到治安卡口](https://s.weibo.com//weibo?q=%23%E7%9A%84%E5%93%A5%E8%AE%A4%E5%87%BA%E7%9B%97%E8%B4%BC%E7%9B%B4%E6%8E%A5%E5%BC%80%E5%88%B0%E6%B2%BB%E5%AE%89%E5%8D%A1%E5%8F%A3%23&Refer=top) 214295
+104. [当代年轻人的朋友圈文案](https://s.weibo.com//weibo?q=%23%E5%BD%93%E4%BB%A3%E5%B9%B4%E8%BD%BB%E4%BA%BA%E7%9A%84%E6%9C%8B%E5%8F%8B%E5%9C%88%E6%96%87%E6%A1%88%23&Refer=top) 213321
+105. [男子被蚊子叮咬患脓毒症进ICU](https://s.weibo.com//weibo?q=%23%E7%94%B7%E5%AD%90%E8%A2%AB%E8%9A%8A%E5%AD%90%E5%8F%AE%E5%92%AC%E6%82%A3%E8%84%93%E6%AF%92%E7%97%87%E8%BF%9BICU%23&Refer=top) 207578
+106. [理发前后变化能有多大](https://s.weibo.com//weibo?q=%23%E7%90%86%E5%8F%91%E5%89%8D%E5%90%8E%E5%8F%98%E5%8C%96%E8%83%BD%E6%9C%89%E5%A4%9A%E5%A4%A7%23&Refer=top) 199305
+107. [两男子景区悬崖边脚踢巨石](https://s.weibo.com//weibo?q=%23%E4%B8%A4%E7%94%B7%E5%AD%90%E6%99%AF%E5%8C%BA%E6%82%AC%E5%B4%96%E8%BE%B9%E8%84%9A%E8%B8%A2%E5%B7%A8%E7%9F%B3%23&Refer=top) 198716
+108. [普京称俄罗斯发展不会倒退几十年](https://s.weibo.com//weibo?q=%23%E6%99%AE%E4%BA%AC%E7%A7%B0%E4%BF%84%E7%BD%97%E6%96%AF%E5%8F%91%E5%B1%95%E4%B8%8D%E4%BC%9A%E5%80%92%E9%80%80%E5%87%A0%E5%8D%81%E5%B9%B4%23&Refer=top) 195033
+109. [退伍老兵回应跪地6分钟救晕厥女子](https://s.weibo.com//weibo?q=%23%E9%80%80%E4%BC%8D%E8%80%81%E5%85%B5%E5%9B%9E%E5%BA%94%E8%B7%AA%E5%9C%B06%E5%88%86%E9%92%9F%E6%95%91%E6%99%95%E5%8E%A5%E5%A5%B3%E5%AD%90%23&Refer=top) 193564
+110. [2022河南高招多所名校断档](https://s.weibo.com//weibo?q=%232022%E6%B2%B3%E5%8D%97%E9%AB%98%E6%8B%9B%E5%A4%9A%E6%89%80%E5%90%8D%E6%A0%A1%E6%96%AD%E6%A1%A3%23&Refer=top) 190918
+111. [腾讯视频否认与快手合作](https://s.weibo.com//weibo?q=%23%E8%85%BE%E8%AE%AF%E8%A7%86%E9%A2%91%E5%90%A6%E8%AE%A4%E4%B8%8E%E5%BF%AB%E6%89%8B%E5%90%88%E4%BD%9C%23&Refer=top) 189699
+112. [天津燃气爆燃事故仍有3人失联](https://s.weibo.com//weibo?q=%23%E5%A4%A9%E6%B4%A5%E7%87%83%E6%B0%94%E7%88%86%E7%87%83%E4%BA%8B%E6%95%85%E4%BB%8D%E6%9C%893%E4%BA%BA%E5%A4%B1%E8%81%94%23&Refer=top) 185640
+113. [世界第四个货运机场为什么选在湖北鄂州](https://s.weibo.com//weibo?q=%E4%B8%96%E7%95%8C%E7%AC%AC%E5%9B%9B%E4%B8%AA%E8%B4%A7%E8%BF%90%E6%9C%BA%E5%9C%BA%E4%B8%BA%E4%BB%80%E4%B9%88%E9%80%89%E5%9C%A8%E6%B9%96%E5%8C%97%E9%84%82%E5%B7%9E&Refer=top) 185458
+114. [国际乒联第29周排名](https://s.weibo.com//weibo?q=%23%E5%9B%BD%E9%99%85%E4%B9%92%E8%81%94%E7%AC%AC29%E5%91%A8%E6%8E%92%E5%90%8D%23&Refer=top) 183765
+115. [动作摆出来对面就怂了](https://s.weibo.com//weibo?q=%23%E5%8A%A8%E4%BD%9C%E6%91%86%E5%87%BA%E6%9D%A5%E5%AF%B9%E9%9D%A2%E5%B0%B1%E6%80%82%E4%BA%86%23&Refer=top) 181569
+116. [路人视角韩乔生还挺萌](https://s.weibo.com//weibo?q=%23%E8%B7%AF%E4%BA%BA%E8%A7%86%E8%A7%92%E9%9F%A9%E4%B9%94%E7%94%9F%E8%BF%98%E6%8C%BA%E8%90%8C%23&Refer=top) 180415
+117. [才知道快速冰镇饮料的方法](https://s.weibo.com//weibo?q=%23%E6%89%8D%E7%9F%A5%E9%81%93%E5%BF%AB%E9%80%9F%E5%86%B0%E9%95%87%E9%A5%AE%E6%96%99%E7%9A%84%E6%96%B9%E6%B3%95%23&Refer=top) 171601
+118. [合川桃片总厂破产清算](https://s.weibo.com//weibo?q=%23%E5%90%88%E5%B7%9D%E6%A1%83%E7%89%87%E6%80%BB%E5%8E%82%E7%A0%B4%E4%BA%A7%E6%B8%85%E7%AE%97%23&Refer=top) 170516
+119. [张小泉为什么不能拍蒜](https://s.weibo.com//weibo?q=%23%E5%BC%A0%E5%B0%8F%E6%B3%89%E4%B8%BA%E4%BB%80%E4%B9%88%E4%B8%8D%E8%83%BD%E6%8B%8D%E8%92%9C%23&Refer=top) 163391
+120. [晚晚 象组](https://s.weibo.com//weibo?q=%E6%99%9A%E6%99%9A%20%E8%B1%A1%E7%BB%84&Refer=top) 153566
+121. [人身安全保护令司法解释8月起施行](https://s.weibo.com//weibo?q=%23%E4%BA%BA%E8%BA%AB%E5%AE%89%E5%85%A8%E4%BF%9D%E6%8A%A4%E4%BB%A4%E5%8F%B8%E6%B3%95%E8%A7%A3%E9%87%8A8%E6%9C%88%E8%B5%B7%E6%96%BD%E8%A1%8C%23&Refer=top) 153254
+122. [羽生结弦7月19日新闻发布会](https://s.weibo.com//weibo?q=%23%E7%BE%BD%E7%94%9F%E7%BB%93%E5%BC%A67%E6%9C%8819%E6%97%A5%E6%96%B0%E9%97%BB%E5%8F%91%E5%B8%83%E4%BC%9A%23&Refer=top) 152033
+123. [人工智能能为养老带来什么](https://s.weibo.com//weibo?q=%23%E4%BA%BA%E5%B7%A5%E6%99%BA%E8%83%BD%E8%83%BD%E4%B8%BA%E5%85%BB%E8%80%81%E5%B8%A6%E6%9D%A5%E4%BB%80%E4%B9%88%23&Refer=top) 149518
+124. [奶茶锦衣卫便宜又好喝](https://s.weibo.com//weibo?q=%23%E5%A5%B6%E8%8C%B6%E9%94%A6%E8%A1%A3%E5%8D%AB%E4%BE%BF%E5%AE%9C%E5%8F%88%E5%A5%BD%E5%96%9D%23&Refer=top) 143665
+125. [对台军售休想撼动中国统一大势](https://s.weibo.com//weibo?q=%23%E5%AF%B9%E5%8F%B0%E5%86%9B%E5%94%AE%E4%BC%91%E6%83%B3%E6%92%BC%E5%8A%A8%E4%B8%AD%E5%9B%BD%E7%BB%9F%E4%B8%80%E5%A4%A7%E5%8A%BF%23&Refer=top) 141433
+126. [国防部回应美对台军售](https://s.weibo.com//weibo?q=%23%E5%9B%BD%E9%98%B2%E9%83%A8%E5%9B%9E%E5%BA%94%E7%BE%8E%E5%AF%B9%E5%8F%B0%E5%86%9B%E5%94%AE%23&Refer=top) 140565
+127. [北大校友为讨汤老人儿子募捐](https://s.weibo.com//weibo?q=%23%E5%8C%97%E5%A4%A7%E6%A0%A1%E5%8F%8B%E4%B8%BA%E8%AE%A8%E6%B1%A4%E8%80%81%E4%BA%BA%E5%84%BF%E5%AD%90%E5%8B%9F%E6%8D%90%23&Refer=top) 134688
+128. [男朋友承包了我一年的包](https://s.weibo.com//weibo?q=%23%E7%94%B7%E6%9C%8B%E5%8F%8B%E6%89%BF%E5%8C%85%E4%BA%86%E6%88%91%E4%B8%80%E5%B9%B4%E7%9A%84%E5%8C%85%23&Refer=top) 126931
+129. [小奶狗的颜值能有多高](https://s.weibo.com//weibo?q=%23%E5%B0%8F%E5%A5%B6%E7%8B%97%E7%9A%84%E9%A2%9C%E5%80%BC%E8%83%BD%E6%9C%89%E5%A4%9A%E9%AB%98%23&Refer=top) 122486
+130. [奥比岛 装修](https://s.weibo.com//weibo?q=%E5%A5%A5%E6%AF%94%E5%B2%9B%20%E8%A3%85%E4%BF%AE&Refer=top) 106304
+131. [你想倾诉的时候妈妈都在](https://s.weibo.com//weibo?q=%23%E4%BD%A0%E6%83%B3%E5%80%BE%E8%AF%89%E7%9A%84%E6%97%B6%E5%80%99%E5%A6%88%E5%A6%88%E9%83%BD%E5%9C%A8%23&Refer=top) 105425
+132. [张小泉总经理称中国人切菜方法不对](https://s.weibo.com//weibo?q=%23%E5%BC%A0%E5%B0%8F%E6%B3%89%E6%80%BB%E7%BB%8F%E7%90%86%E7%A7%B0%E4%B8%AD%E5%9B%BD%E4%BA%BA%E5%88%87%E8%8F%9C%E6%96%B9%E6%B3%95%E4%B8%8D%E5%AF%B9%23&Refer=top) 104116
+133. [人类幼崽请你逛超市是什么体验](https://s.weibo.com//weibo?q=%23%E4%BA%BA%E7%B1%BB%E5%B9%BC%E5%B4%BD%E8%AF%B7%E4%BD%A0%E9%80%9B%E8%B6%85%E5%B8%82%E6%98%AF%E4%BB%80%E4%B9%88%E4%BD%93%E9%AA%8C%23&Refer=top) 103924
+134. [胡明轩14分](https://s.weibo.com//weibo?q=%23%E8%83%A1%E6%98%8E%E8%BD%A914%E5%88%86%23&Refer=top) 100356
+135. [古代就有站岗小狗](https://s.weibo.com//weibo?q=%23%E5%8F%A4%E4%BB%A3%E5%B0%B1%E6%9C%89%E7%AB%99%E5%B2%97%E5%B0%8F%E7%8B%97%23&Refer=top) 100214
+136. [蔡徐坤用海形容自己](https://s.weibo.com//weibo?q=%23%E8%94%A1%E5%BE%90%E5%9D%A4%E7%94%A8%E6%B5%B7%E5%BD%A2%E5%AE%B9%E8%87%AA%E5%B7%B1%23&Refer=top) 96964
+137. [成都本土疫情病例活动轨迹风险点位一览](https://s.weibo.com//weibo?q=%23%E6%88%90%E9%83%BD%E6%9C%AC%E5%9C%9F%E7%96%AB%E6%83%85%E7%97%85%E4%BE%8B%E6%B4%BB%E5%8A%A8%E8%BD%A8%E8%BF%B9%E9%A3%8E%E9%99%A9%E7%82%B9%E4%BD%8D%E4%B8%80%E8%A7%88%23&Refer=top) 96488
+138. [不能拍蒜的菜刀等于放弃中餐市场](https://s.weibo.com//weibo?q=%23%E4%B8%8D%E8%83%BD%E6%8B%8D%E8%92%9C%E7%9A%84%E8%8F%9C%E5%88%80%E7%AD%89%E4%BA%8E%E6%94%BE%E5%BC%83%E4%B8%AD%E9%A4%90%E5%B8%82%E5%9C%BA%23&Refer=top) 74536
+139. [女子违停被交警老公贴罚单](https://s.weibo.com//weibo?q=%23%E5%A5%B3%E5%AD%90%E8%BF%9D%E5%81%9C%E8%A2%AB%E4%BA%A4%E8%AD%A6%E8%80%81%E5%85%AC%E8%B4%B4%E7%BD%9A%E5%8D%95%23&Refer=top) 73918
+140. [中国男篮大胜印尼男篮](https://s.weibo.com//weibo?q=%23%E4%B8%AD%E5%9B%BD%E7%94%B7%E7%AF%AE%E5%A4%A7%E8%83%9C%E5%8D%B0%E5%B0%BC%E7%94%B7%E7%AF%AE%23&Refer=top) 73535
+141. [河南省考7月21日公布笔试成绩](https://s.weibo.com//weibo?q=%23%E6%B2%B3%E5%8D%97%E7%9C%81%E8%80%837%E6%9C%8821%E6%97%A5%E5%85%AC%E5%B8%83%E7%AC%94%E8%AF%95%E6%88%90%E7%BB%A9%23&Refer=top) 8733
+142. [搞笑女化妆翻车体验](https://s.weibo.com//weibo?q=%23%E6%90%9E%E7%AC%91%E5%A5%B3%E5%8C%96%E5%A6%86%E7%BF%BB%E8%BD%A6%E4%BD%93%E9%AA%8C%23&Refer=top) 8062
